# amla-streamlit

./: README.md  app.py  mlp_utils.py  pyproject.toml  requirements.txt
data/: airport_coords.csv
data/distancematrices/: ATL.csv  BOS.csv  CLT.csv  DEN.csv  DFW.csv  DTW.csv  EWR.csv  IAD.csv  JFK.csv  LAX.csv  LGA.csv  MIA.csv  OAK.csv  ORD.csv  PHL.csv  SFO.csv
models/: airport.model  baseline-avg.csv  cabin.model  mlp-l1norm-processor-kh.joblib  mlp-l1norm-regressor-model-kh.pth  mlp-l1norm-regressor-model-statedict-kh.pth  mlp-l1norm-regressor-targetscaler-kh.joblib  mlp-l1norm-regressor-targetscaler-kh.pth  simple-regression-zb-attempt3.joblib  xgb_d_data.csv  xgb_n_data.csv  xgb_s_data.csv
