[tool.poetry]
name = "amla-streamlit"
version = "0.1.0"
description = "Streamlit app for AT3"
authors = ["Martin Neloe <Martin.A.Neloe@student.edu.au>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
streamlit = "1.27.2"
pandas = "2.0.1"
plotly = "^5.18.0"
scikit-learn = "1.2.2"
xgboost = "2.0.1"
torch = "^2.1.0"
torchvision = "0.16.0"
gensim = "4.3.2"
nvidia-cublas-cu11 = { version = "11.10.3.66", platform = 'linux' }
nvidia-cuda-cupti-cu11 = { version = "11.7.101", platform = 'linux' }
nvidia-cuda-nvrtc-cu11 = { version = "11.7.99", platform = 'linux' }
nvidia-cuda-runtime-cu11 = { version = "11.7.99", platform = 'linux' }
nvidia-cudnn-cu11 = { version = "8.5.0.96", platform = 'linux' }
nvidia-cufft-cu11 = { version = "10.9.0.58", platform = 'linux' }
nvidia-curand-cu11 = { version = "10.2.10.91", platform = 'linux' }
nvidia-cusolver-cu11 = { version = "11.4.0.1", platform = 'linux' }
nvidia-cusparse-cu11 = { version = "11.7.4.91", platform = 'linux' }
nvidia-nccl-cu11 = { version = "2.14.3", platform = 'linux' }
nvidia-nvtx-cu11 = { version = "11.7.91", platform = 'linux' }
triton = { version = "2.0.0", platform = 'linux' }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
