[tool.poetry]
name = "amla-streamlit"
version = "0.1.0"
description = "Streamlit app for AT3"
authors = ["Martin Neloe <Martin.A.Neloe@student.edu.au>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
streamlit = "1.27.2"
pandas = "2.0.1"
plotly = "^5.18.0"
scikit-learn = "1.2.2"
xgboost = "2.0.1"
torch = "^2.1.0"
torchvision = "0.16.0"
gensim = "4.3.2"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
